2006-02-15  Aaron Stone  <aaron@serendipity.cx>

	* sortmodule.c, sortmodule.h, sort.h:
	Updated to match latest function prototypes.

2006-02-15  Aaron Stone  <aaron@serendipity.cx>

	* db.c:
	Changed all instances of db_escape_string to dm_stresc;
	Added more escaping of %s values in queries;
	Made db_user_exists case insensitive.
	* dsn.c:
	Refactors dsnuser_resolve into little pieces.
	* dbmail_check_dsn.c:
	Unit tests for dsnuser_resolve.
	* misc.c:
	Added function zap_between.
	* dbmail_check_misc.c:
	Unit tests for zap_between and find_bounded.
	* auth.h, authmodule.c, modules/authsql.c, modules/authldap.c:
	Added function auth_check_userid that works like
	auth_get_userid, but doesn't return allocated memory.
	* dbmail.conf:
	Changed TIMSIEVED section to SIEVE. Added DELIVERY section.

2006-02-12  Paul J Stevens <paul@nfg.nl>

	* ChangeLog, Makefile.am, authmodule.c, check_dbmail_imapd.c, db.c, 
	  dbmail-imapsession.c, dbmodule.c, imap4.h, imapcommands.c, main.c, 
	  modules/authsql.c, modules/dbmysql.c, modules/sortsieve.c, pipe.c, 
	  pop3.c, sievecmd.c, sort.c, sort.h, sortmodule.c, timsieve.c:
	resync
	* authmodule.c, dbmail-mailbox.c, dbmodule.c, debian/changelog, 
	  debian/rules, imap4.c, misc.c, modules/authsql.c, 
	  modules/sortsieve.c, sort.c, sortmodule.c:
	misc minor cleanups

2006-02-07  Aaron Stone  <aaron@serendipity.cx>

	* Makefile.am:
	Moved the Sieve programs in sbin with everything else.
	* authmodule.c, dbmodule.c, sortmodule.c:
	Safer handling of null driver values.
	* db.c:
	Adding and renaming Sieve scripts are now atomic by
	placing the queries inside of begin and commit transaction.
	* sort.h, sort.c, modules/sortsieve.c, sievecmd.c, timsieve.c:
	Sort results are returned in an independent sort_result_t struct,
	and the sort_connect, sort_disconnect functions have been zapped.
	* pipe.c:
	Set the envelope sender address in the dbmail-message struct.


2006-02-03  Paul J Stevens <paul@nfg.nl>
