@@ -430,7 +430,6 @@ int insert_messages(struct DbmailMessage *message,
 	/* Only the last step of the returnpath is used. */
 	if ((ret_path = dm_list_getstart(returnpath))) {
 		dbmail_message_set_header(message, "Return-Path", (char *)ret_path->data);
-		dbmail_message_set_envelope(message, (char *)ret_path->data);
 	}
 
  	delivery_status_t final_dsn;
